<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/BoldFontStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_dialog_title"
        android:textAlignment="center"
        android:textColor="@color/main_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_card"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle">

        <TextView
            android:id="@+id/editNameTitle"
            style="@style/BoldFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_name_title"
            android:textColor="@color/main_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editName"
            style="@style/RegularFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:hint="@string/edit_name_description"
            android:inputType="textPersonName"
            android:labelFor="@id/editNameTitle"
            android:maxLength="50"
            android:minHeight="48dp"
            android:text=""

            android:textColor="@color/main_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editEmailTitle"
            style="@style/BoldFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_email_title"
            android:textColor="@color/main_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/RegularFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:hint="@string/edit_email_description"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/main_gray"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editAgeTitle"
                style="@style/BoldFontStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/text_age_title"
                android:textColor="@color/main_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editIdTitle"
                style="@style/BoldFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_id_title"
                android:textColor="@color/main_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editAge"
                style="@style/RegularFontStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints="age"
                android:background="@null"
                android:hint="@string/edit_age_description"
                android:inputType="number"
                android:maxLength="2"
                android:text=""
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/editId"
                style="@style/RegularFontStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/Second_gray"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iconConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/ic_confirm_description"
                android:src="@drawable/ic_confirm"
                app:tint="@color/main_gray" />

            <ImageView
                android:id="@+id/iconCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ic_cancel_description"
                android:src="@drawable/ic_cancel"
                app:tint="@color/main_gray" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>