<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="290dp"
    android:layout_height="205dp"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/border_card"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textName"
        style="@style/BoldFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/main_gray"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/main_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textEmailTitle"
        style="@style/BoldFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_email_title"
        android:textColor="@color/main_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textEmail"
        style="@style/RegularFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/main_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailTitle" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail">

        <TextView
            android:id="@+id/textAgeTitle"
            style="@style/BoldFontStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/text_age_title"
            android:textColor="@color/main_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textIdTitle"
            style="@style/BoldFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_title"
            android:textColor="@color/main_gray"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textAge"
            style="@style/RegularFontStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text=""
            android:textColor="@color/main_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textId"
            style="@style/RegularFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/main_gray"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iconEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/ic_edit_description"
            android:src="@drawable/ic_edit"
            app:tint="@color/main_gray" />

        <ImageView
            android:id="@+id/iconDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_delete_description"
            android:src="@drawable/ic_delete"
            app:tint="@color/main_gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>